# ablina

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  algebra_parser.py  examples.ipynb  inner_product.py  linear_map.py  math_set.py  mkdocs.yml  operation.py  parser.py  pyproject.toml  utils.py  vector.py  vector_space.py  vectorspace.py  vs.py  vs_base.py  vs_new.py  vs_old.py  vs_utils.py
Vector/: vector_np.py
ablina/: __init__.py  experimental.py  field.py  form.py  forms.py  innerproduct.py  linearmap.py  mathset.py  matrix.py  operations.py  parser.py  utils.py  vectorspace.py  visualize.py  vs_utils.py
alapy/: __init__.py  inner_product.py  innerproduct.py  linear_map.py  linearmap.py  math_set.py  mathset.py  operation.py  operations.py  parser.py  utils.py  vector_space.py  vectorspace.py  vs_utils.py
alapy/Vector/: vector.py
docs/: index.md  resources.md
docs/guides/: getting-started.md  installation.md
docs/reference/: field.md  form.md  forms.md  innerproduct.md  linearmap.md  mathset.md  matrix.md  utils.md  vectorspace.md
tests/: test_experimental.py  test_field.py  test_form.py  test_linearmap.py  test_mathset.py  test_matrix.py  test_operations.py  test_parser.py  test_utils.py  test_vectorspace.py  test_vs_utils.py
